# deoplete-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  install.sh  run_test.sh
ftdetect/: deoplete-cpp.vim
plugin/: deoplete-cpp.vim
rplugin/python3/deoplete/: .gitignore  clang_code_completion.py  clang_source_base.py  clang_util.py  test.py  test_clang_code_completion.py
rplugin/python3/deoplete/sources/: arduino.py  c.py  clang_util.py  cmake.py  cpp.py  cuda.py  identifier.py  include.py  objc.py  objcpp.py
rplugin/python3/deoplete/test_sources/: functions.h  grpc_source.cc  objects.cc  objects.h  opencv_source.cc  person.h  source.c  source.cc  std_source.cc  std_source2.cc
src/: CMakeLists.txt  argument_manager.cc  argument_manager.h  c_argument_manager.cc  c_argument_manager.h  clang_completer.cc  clang_completer.h  clang_completer.i  completion_cache.h  completion_result.cc  completion_result.h  cpp_argument_manager.cc  cpp_argument_manager.h  file_content.cc  file_content.h  objc_argument_manager.cc  objc_argument_manager.h  objcpp_argument_manager.cc  objcpp_argument_manager.h  token.cc  token.h
test/: CMakeLists.txt  dependency1.h  requirements.txt  sample1.c  sample1.cc  sample1.m  sample2.c  sample2.cc  sample3.cc  sample4.cc  sample5.cc  test.c  test.cpp  test_clang_completer.cc  test_cmake_command.py  test_code_complete.py  test_token.cc
